--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"dependencies": {
 		"@iconify/svelte": "^5.0.2",
-		"daisyui": "^5.3.10"
+		"daisyui": "^5.3.10",
+		"marked": "^16.4.1"
 	}
 }
